# doudizhu_learning_environment

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
doudizhu_learning_environment/: CMakeLists.txt  pydoudizhu.cc
doudizhu_learning_environment/doudizhu_lib/: CMakeLists.txt  doudizhu_card.cc  doudizhu_card.h  doudizhu_deck.cc  doudizhu_deck.h  doudizhu_game.cc  doudizhu_game.h  doudizhu_hand.cc  doudizhu_hand.h  doudizhu_history_item.cc  doudizhu_history_item.h  doudizhu_move.cc  doudizhu_move.h  doudizhu_observation.cc  doudizhu_observation.h  doudizhu_state.cc  doudizhu_state.h  doudizhu_test.cc  doudizhu_utils.cc  doudizhu_utils.h  douzero_encoder.cc  douzero_encoder.h  observation_encoder.h  test.cc  utils.cc  utils.h
examples/: CMakeLists.txt  console_play.cc  game_example.cc  random_sim.py  readme.md  smoke_test.py  temp.py
